--- a/app/views/tweets/_coms.html.erb
+++ b/app/views/tweets/_coms.html.erb
@@ -6,7 +6,7 @@
           <div class="media-content">
             <div class="content">
               <p>
-                <strong>coms.comenter</strong>
+                <strong>coms.commenter</strong>
                 <br>
                 <%= coms.body %>
               </p>
