--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,25 +1,40 @@
-<div class="container">
-  <div class="columns">
-    <div class="column is-offset-one-quarter">
-      <p class="title">
-        <%= @tweet.title %>
-      </p>
+<div class="has-background-primary">
+  <section class="section">
+    <div class='content'>
+      <h1><strong><%= @tweet.title %> </strong></h1>
     </div>
-  </div>
-
-  <div class="columns">
-    <div class="column is-offset-one-quarter">
-      <p class="subtitle">
-        <%= @tweet.body %>
-      </p>
+    <div class="content">
+      <%= @tweet.body %>
     </div>
-  </div>
-
-  <div class="columns">
-    <div class="column is-offset-one-quarter">
-      <div class="button is-primary is-light">
-        <%= link_to "Back", root_path %>
-      </div>
+  </section>
+  <section class="section">
+    <div class="content">
+      <%= link_to "Leave Comment", new_tweet_comment_path(@tweet), class: " button is-link" %>
+      <%= link_to 'Back', root_path, class: "button is-link"%>
     </div>
+  </section>
+  <div class="container">
+    <section class="section">
+      <% @tweet.comments.each do |comment| %>
+        <div class="content">
+          <p>
+            <strong><%= comment.commenter %></strong><%=time_ago_in_words(comment.created_at) %> ago
+            <br>
+            <strong><%= comment.body %></strong>
+          </p>
+        </div>
+        <nav class="level is-mobile">
+          <div class="level-left">
+            <%= link_to edit_tweet_comment_path(comment), class: "level-item has-text-primary-dark" do %>
+              <span class="icon is-small has-text-primary-dark"><i class="fas fa-edit"></i></span>
+            <% end %>
+            <%= link_to tweet_comment_path(comment), method: :delete , class: "level-item", data: { confirm: "Are you sure you want to delete this comment?" } do %>
+              <span class="icon is-small"><i class="fas fa-trash-alt"></i></span>
+            <% end %>
+          </div>
+        </nav>
+      <% end %>
+    </section>
   </div>
 </div>
+
