--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,34 +1,52 @@
-
-
 <section class="section">
   <div class="has-background-primary">
     <%= form_with model: [tweet, comment], local: true do |form|%>
       <div class="has-background-link">
         <div class="container ">
+          <% if comment.errors.any? %>
+            <div class="has-background-link">
+              <div class="container ">
+                <article class="media">
+                  <div class="media-content">
+                    <div class="content">
+                      <p>
+                        <strong><%= pluralize(comment.errors.count, "error") %> prohibited this article from being saved:</strong>
+                        <br>
+                        <ul>
+                          <% comment.errors.full_messages.each do |msg| %>
+                            <li><%= msg %></li>
+                          <% end %>
+                        </ul>
+                      </p>
+                    </div>
+                  </div>
+                </article>
+              </div>
+            </div>
+          <% end %>
           <div class="card">
             <div class="has-background-link">
               <div class="field">
                 <div class="control">
-                  <%= form.label :title, class: "button is-primary"%>
-                  <%= form.text_field :title, class: "input is-primary ", type: "text"%>
+                  <%= form.label :commenter, class: "button is-primary is-rounded"%>
+                  <%= form.text_field :commenter, class: "input is-primary is-rounded", type: "text"%>
                 </div>
               </div>
               <div class="field">
                 <div class="control">
-                  <%= form.label :body, class: "button is-primary"%>
-                  <%= form.text_area :body, class: "input is-large ", type: "textarea" %>
+                  <%= form.label :body, class: "button is-primary is-rounded"%>
+                  <%= form.text_area :body, class: "input is-large is-rounded", type: "textarea" %>
                 </div>
               </div>
               <footer class="card-footer">
                 <p>
-                  <%= form.submit button, class: "button is-primary" %>
-                  <%= link_to 'Back', root_path, class: "button is-primary is-light" %>
+                  <%= form.submit button, class: "button is-primary is-rounded" %>
+                  <%= link_to 'Back', :back, class: "button is-primary is-rounded is-light" %>
                 </p>
               </footer>
             </div>
           </div>
         </div>
-      </div>
       </div>
     <% end %>
   </div>
